--- a/frontend/src/package.json
+++ b/frontend/src/package.json
@@ -4,8 +4,11 @@
   "description": "Hola como estas",
   "main": "index.js",
   "scripts": {
-    "test": "npm start"
-  },
+  "start": "react-scripts start",
+  "build": "react-scripts build",
+  "test": "react-scripts test",
+  "eject": "react-scripts eject"
+},
   "repository": {
     "type": "git",
     "url": "LolNalisis"
