--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
-  "name": "prueba",
+  "name": "pedro",
   "version": "1.0.0",
   "description": "descrip",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "Pedro Martinez",
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "LolNalisis"
+  },
+  "keywords": [
+    "IA"
+  ]
 }
